adv-it/l11-ingress/ingress-paths.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Host Paths
#



apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: www.xxx.net
    http:
      paths:
      - path: "/page1"
        backend:
          serviceName: webx
          servicePort: 80

      - path: "/page2"
        backend:
          serviceName: webx
          servicePort: 80

      - path: "/page3"
        backend:
          serviceName: webx
          servicePort: 80
